--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>Halaman Home EJS</h1>
+
+    <h3><%= 'Hello World'.toUpperCase() %></h3>
+    
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia autem id veritatis quam illum cumque molestias in? Sunt temporibus explicabo labore consequuntur, nobis asperiores corporis modi consequatur fugiat vel neque!</p>
+    
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam corporis est exercitationem ipsum, distinctio magni beatae quis, vitae impedit accusantium in ratione officiis voluptatibus ullam necessitatibus, officia esse ut tempore?</p>
 </body>
 </html>
