--- a/views/random.ejs
+++ b/views/random.ejs
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Random</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Random Number : <%= num %></h1>
-</body>
+    <% if (num % 2 === 0) {%>
+    <h3>Angka Genap</h3>
+    <% } else { %>
+    <h3>Angka Ganjil</h3>
+    <% } %>
+
+    <h1>The number is <%= num % 2 === 0 ? 'even' : 'odd' %></h1>
+  </body>
 </html>
