--- a/views/tag.ejs
+++ b/views/tag.ejs
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= tag %> - Dev Code</title>
-</head>
-<body>
-    <h1>Tags : <%= tag %></h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title><%= data.title %> - Dev Code</title>
+  </head>
+  <body>
+    <% if (data.img) { %>
+    <img src="<%= data.img %>" alt="" />
+    <% } %>
+
+    <h1>Tags : <%= data.title %></h1>
+    <h2>Followers : <%= data.followers %></h2>
+    <p><%= data.description %></p>
+    <hr />
+
+    <% for (post of data.posts){ %>
+    <p><%= post.title %> - <%= post.author %></p>
+    <% } %>
+  </body>
 </html>
